syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/Alexander-Mandzhiev/school_schedule/shared/pkg/proto/common/v1;common_v1";

// =============================================================================
// User structures (common.v1)
// =============================================================================

// Информация о канале уведомлений
message NotificationMethod {
  string provider_name = 1 [(validate.rules).string.min_len = 1]; // telegram, email, push и т.д.
  string target = 2 [(validate.rules).string.min_len = 1]; // email, чат-id и т.д.
}

// Базовая информация о пользователе
message UserInfo {
  string login = 1 [(validate.rules).string.min_len = 3];
  string email = 2 [(validate.rules).string.email = true];
  repeated NotificationMethod notification_methods = 3;
}

// Полная информация о пользователе
message User {
  string id = 1 [(validate.rules).string.uuid = true];
  UserInfo info = 2 [(validate.rules).message.required = true];
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}
